# gel-rust

./: Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: publish-crate.yaml  publish-gel-db-protocol.yaml  publish-gel-dsn.yaml  publish-gel-jwt.yaml  publish-gel-pg-captive.yaml  publish-gel-pg-protocol.yaml  test-mac.yml  test-windows.yml  test.yml
examples/query-error/src/: main.rs
gel-auth/: Cargo.toml
gel-auth/src/: lib.rs  md5.rs
gel-auth/src/gel/: mod.rs  server_state_machine.rs
gel-auth/src/handshake/: client_auth.rs  mod.rs  server_auth.rs
gel-auth/src/postgres/: client_state_machine.rs  mod.rs  server_state_machine.rs
gel-auth/src/scram/: mod.rs
gel-auth/tests/: real_postgres.rs
gel-babelfish/: Cargo.toml  README.md
gel-babelfish/examples/: listener.rs
gel-babelfish/src/: config.rs  hyper.rs  lib.rs  service.rs  stream.rs  stream_type.rs
gel-babelfish/src/listener/: gel.rs  http.rs  mod.rs  postgres.rs
gel-captive/: Cargo.toml  README.md
gel-captive/src/: lib.rs  server.rs  utils.rs
gel-captive/tests/func/: main.rs
gel-config/: Cargo.toml  README.md  schema.json
gel-config/src/: current.rs  current2.rs  lib.rs  ops.rs  parser.rs  raw.rs  schema.edgeql  schema.rs  structure.rs  types.rs  validation.rs
gel-config/src/schema2/: mod.rs  ops.rs  parser.rs  raw.rs  schema-6.json  structure.rs
gel-config/tests/: test_client.rs
gel-config/tests/client/: .gitattributes  complex.ddl  complex.toml  error-bad-enum.toml  error-bad-type-2.toml  error-bad-type.toml  error-missing-tname.toml  error-protected-property.toml  escaping.ddl  escaping.toml  full.ddl  full.toml  object.ddl  object.toml  warning.ddl  warning.toml
gel-config/tests/server/: complex.toml
gel-config/tools/: rebuild-schema.rs
gel-connpool/: Cargo.toml  README.md
gel-connpool/src/: lib.rs
gel-db-proto/: Cargo.toml
gel-db-proto/src/: message_group.rs
gel-db-protocol/: Cargo.toml
gel-db-protocol/src/: arrays.rs  buffer.rs  codecs.rs  const_encoding.rs  datatypes.rs  descriptors.rs  encoding.rs  errors.rs  field_access.rs  gen.rs  lib.rs  macros.rs  message_group.rs  protocol.rs  structs.rs  test_protocol.rs
gel-db-protocol/src/gen2/: macros.rs  mod.rs  traits.rs
gel-derive/: Cargo.toml
gel-derive/src/: attrib.rs  enums.rs  json.rs  lib.rs  shape.rs
gel-derive/tests/: crate_path.rs  json.rs  list_scalar_types.rs  rename.rs  rename_enum.rs  rename_struct.rs
gel-dsn/: Cargo.toml
gel-dsn/examples/: postgres_dsn.rs
gel-dsn/src/: env.rs  file.rs  host.rs  lib.rs  user.rs
gel-dsn/src/gel/: branding.rs  builder.rs  config.rs  credentials.rs  duration.rs  env.rs  error.rs  instance_name.rs  mod.rs  param.rs  params.rs  project.rs  stored.rs
gel-dsn/src/postgres/: host.rs  mod.rs  params.rs  passfile.rs  raw_params.rs
gel-dsn/tests/gel/: test.rs
gel-errors/: Cargo.toml
gel-errors/src/: display.rs  error.rs  traits.rs
gel-frontend/: Cargo.toml
gel-frontend/examples/: listener.rs  smoketest.rs
gel-frontend/src/: config.rs  hyper.rs  listener.rs  python.rs  service.rs  stream.rs  stream_type.rs  tower.rs
gel-frontend/src/listener/: gel.rs  http.rs  mod.rs  postgres.rs
gel-jwt/: Cargo.toml  README.md
gel-jwt/src/: bare_key.rs  gel.rs  key.rs  lib.rs  python.rs  registry.rs
gel-pg-captive/: Cargo.toml  README.md
gel-pg-captive/src/: ephemeral_port.rs  lib.rs  stdio_reader.rs
gel-pg-protocol/: Cargo.toml  README.md
gel-pg-protocol/examples/: connect.rs
gel-pg-protocol/src/: errors.rs  lib.rs  protocol.rs
gel-pg-protocol/src/conn/: conn.rs  flow.rs  mod.rs  raw_conn.rs
gel-protocol/: Cargo.toml
gel-protocol/src/: client_message.rs  codec.rs  common.rs  descriptors.rs  encoding.rs  errors.rs  features.rs  lib.rs  model.rs  new_protocol.rs  query_arg.rs  query_result.rs  queryable.rs  server_message.rs  value.rs
gel-protocol/src/model/: bignum.rs  memory.rs  time.rs
gel-protocol/src/model/bignum/: bigdecimal_interop.rs  num_bigint_interop.rs
gel-protocol/src/serialization/decode/: chrono.rs  raw_composite.rs  raw_scalar.rs
gel-protocol/tests/: client_messages.rs  codecs.rs  datetime_chrono.rs  datetime_system.rs  server_messages.rs  type_descriptors.rs
gel-protogen/: Cargo.toml  README.md
gel-protogen-proc-macros/: Cargo.toml  README.md
gel-protogen-proc-macros/src/: enum_choice.rs  enum_repr.rs  lib.rs
gel-protogen/src/: arrays.rs  datatypes.rs  encoding.rs  gen.rs  lib.rs  macros.rs  message_group.rs  structs.rs  test_protocol.rs  writer.rs
gel-schema/: Cargo.toml  schema.json
gel-schema-parser/: Cargo.toml
gel-schema-parser/src/: ast.rs  lib.rs
gel-schema/benches/: schema_basic.rs
gel-schema/examples/: schema_basic.rs
gel-schema/src/: class.rs  class_structure.json  lib.rs  name.rs  parser.rs  schema.rs  structure.rs  value.rs
gel-stream/: Cargo.toml  README.md
gel-stream/src/: lib.rs
gel-stream/src/client/: connection.rs
gel-stream/src/common/: mod.rs  openssl.rs  resolver.rs  rustls.rs  stream.rs  target.rs  tls.rs  tokio_stream.rs
gel-stream/src/server/: acceptor.rs  mod.rs
gel-stream/tests/: low_level.rs  socket.rs  tls.rs  tls_unix.rs
gel-stream/tests/certs/: gen.sh  server-alt.cert.pem  server-alt.key.pem
gel-tokio/: Cargo.toml  README.md
gel-tokio/examples/: query_args.rs  simple.rs  transaction_errors.rs
gel-tokio/src/: client.rs  lib.rs  options.rs  transaction.rs
gel-tokio/src/raw/: connection.rs  dumps.rs  mod.rs  queries.rs  response.rs
tests/: Cargo.toml
tests/functional/src/: client.rs  server.rs  transactions.rs
tools/: bump.sh  list.sh  publish.sh
