[workspace]
resolver = "2"
members = [
    "gel-auth",
    "gel-captive",
    "gel-db-protocol",
    "gel-derive",
    "gel-dsn",
    "gel-errors",
    "gel-frontend",
    "gel-jwt",
    "gel-pg-captive",
    "gel-pg-protocol",
    "gel-protogen",
    "gel-protocol",
    "gel-stream",
    "gel-tokio",
    "examples/globals",
    "examples/query-error",
    "tests", "gel-protogen-proc-macros",
]

[profile.release]
debug = true
lto = true

[workspace.dependencies]
tokio = { version = "1.45.1" }
tracing = { version = "0.1" }
pyo3 = { version = "0.23", features = ["extension-module", "serde", "macros"] }

[workspace.package]
rust-version = "1.85" # keep in sync with flake.nix
edition = "2024"

[workspace.lints.clippy]
