[package]
name = "gel-auth"
license = "MIT/Apache-2.0"
version = "0.1.6"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = "Authentication and authorization for the Gel database."
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[features]
full = ["postgres", "gel"]
postgres = ["dep:gel-pg-protocol"]
gel = ["dep:gel-protocol"]

[dependencies]
gel-pg-protocol = { version = "^0.1.1", path = "../gel-pg-protocol", optional = true }
gel-protocol = { version = "^0.8.5", path = "../gel-protocol", optional = true, features = ["__new-protocol"] }

tracing.workspace = true
md5 = "0.7.0"
constant_time_eq = "0.4"
derive_more = { version = "2", features = ["display", "debug", "error", "from"] }
rand = "0.9"
unicode-normalization = "0.1.23"
base64 = "0.22"
roaring = "0.10.6"
hmac = "0.12.1"
sha2 = "0.10.8"

[dev-dependencies]
gel-pg-captive = { path = "../gel-pg-captive" }
gel-stream = { path = "../gel-stream", features = ["rustls", "tokio", "client"] }
gel-auth = { path = ".", features = ["full"] }

tokio = { version = "1", features = ["full"] }
pretty_assertions = "1"
rstest = "0.25"
hex-literal = "1"
hexdump = "0.1"

[lib]

[package.metadata.docs.rs]
features = ["full"]
