[package]
name = "gel-captive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fs_extra = "1.3.0"
nix = { version = "0.28.0", features = ["user", "signal"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

[target.'cfg(unix)'.dependencies]
command-fds = "0.3.0"
