[package]
name = "gel-config"
license = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = "Configuration file parser for Gel."
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
derive_more = { version = "2", features = ["error", "debug", "display"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.9.5", features = ["serde"] }
indexmap = "2"

[dev-dependencies]
pretty_assertions = "1.2.0"

[lib]
