[package]
name = "gel-db-protocol"
license = "MIT/Apache-2.0"
version = "0.1.1"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = "Macros to make parsing and serializing of PostgreSQL-like protocols easier."
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "2"
paste = "1"
derive_more = { version = "2", features = ["full"] }
uuid = "1"
const-str = "0.6"

[dev-dependencies]
pretty_assertions = "1.2.0"
static_assertions = "1"
