[package]
name = "gel-frontend"
version = "0.1.0"
edition = "2024"

[features]
python_extension = ["pyo3/serde"]

[dependencies]
pyo3.workspace = true
tokio.workspace = true

# We should offer openssl/rustls as separate features
gel-stream = { path = "../gel-stream", version = "0.4", features = ["server", "rustls", "pem", "__test_keys"] }
gel-auth = { path = "../gel-auth", version = "0.1", features = ["postgres", "gel"] }
gel-pg-protocol = { path = "../gel-pg-protocol", version = "0.1" }
gel-jwt = { path = "../gel-jwt", version = "0.1", features = ["keygen"] }

hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.8", features = ["full"] }
h2 = "0.4.6"
http-body-util = "0.1.2"
tower-http = { version = "0.6.1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
pin-project = "1"
futures = "0.3"
scopeguard = "1"
strum = { version = "0.27", default-features = false, features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
sha1 = "0.10.6"
base64 = "0.22.1"
bytes = "1"
thiserror = "2"
hexdump = "0"
tracing = "0"
tracing-subscriber = "0"
x509-parser = "0.17"
derive-io = "=0.2.2"

[dev-dependencies]
gel-stream = { path = "../gel-stream", version = "0.4", features = ["client", "__test_keys"] }
tokio = { workspace = true, features = ["full"] }

rstest = "0.25"
test-log = { version = "0.2", features = ["trace"] }
pyo3 = { workspace = true }

[lib]
