[package]
name = "gel-frontend"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
tokio.workspace = true

# We should offer openssl/rustls as separate features
gel-stream = { path = "../gel-stream", version = "^0.4.5", features = ["server", "rustls", "pem", "__test_keys"] }
gel-auth = { path = "../gel-auth", version = "^0.1.7", features = ["postgres", "gel"] }
gel-pg-protocol = { path = "../gel-pg-protocol", version = "^0.1.2" }
gel-db-protocol = { path = "../gel-db-protocol", version = "0.2.0" }
gel-jwt = { path = "../gel-jwt", version = "0.1", features = ["keygen"] }

hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.13", features = ["full"] }
h2 = "0.4.6"
http-body-util = "0.1.2"
tower-http = { version = "0.6.1", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
pin-project = "1"
futures = "0.3"
scopeguard = "1"
strum = { version = "0.27", default-features = false, features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
sha1 = "0.10.6"
base64 = "0.22.1"
bytes = "1"
thiserror = "2"
hexdump = "0.1.2"
tracing = "0"
tracing-subscriber = "0"
x509-parser = "0.17"
derive-io = { version = "=0.5.0", features = ["tokio"] }
unflatter = "0.1.1"
consume_on_drop = "0.1.1"
tokio-util = "0.7"
static_assertions = "1.1"
uuid = "1"

[dev-dependencies]
gel-stream = { path = "../gel-stream", version = "^0.4.5", features = ["client", "__test_keys"] }
tokio = { workspace = true, features = ["full"] }

rstest = "0.25"
ntest_timeout = "0.9"
test-log = { version = "0.2.17", features = ["trace"] }
pyo3 = { workspace = true }

[lib]
