
[package]
name = "gel-pg-captive"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = "Run a captive PostgreSQL server for testing purposes"

[lints]
workspace = true

[dependencies]
gel-auth = { path = "../gel-auth" }

openssl = "0.10.72"
tempfile = "3"
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.29", features = ["signal"] }

[lib]
