
[package]
name = "gel-pg-captive"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = "Run a captive PostgreSQL server for testing purposes."

[lints]
workspace = true

[dependencies]
gel-auth = { path = "../gel-auth", version = "0.1.5" }
gel-stream = { path = "../gel-stream", version = "0.4.3", default-features = false, features = ["client", "tokio", "rustls", "__test_keys"] }

tempfile = "3"
socket2 = { version = "0.5", features = ["all"] }
nix = { version = "0.30", features = ["signal"] }

[lib]
