[package]
name = "gel-pg-protocol"
license = "MIT/Apache-2.0"
version = "0.1.2"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = "The Gel implementation of the PostgreSQL wire protocol."
readme = "README.md"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
gel-protogen = { path = "../gel-protogen", version= "^0.1.2" }
paste = "1"
derive_more = { version = "2", features = ["try_from"] }

[dev-dependencies]
pretty_assertions = "1.2.0"
rand = "0.9"

[lib]
