[package]
name = "gel-schema"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
im-rc = { version = "15.1.0", features = ["serde"] }
indexmap = { version = "2.11.4", features = ["serde"] }
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["derive"] }
tinyjson = "2.5.1"
tracing.workspace = true
uuid = {version = "1.18.1", features = ["serde"] }

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
uuid = {version = "*", features = ["v4"] }

[[bench]]
name = "schema_basic"
harness = false
