[package]
name = "gel-stream"
license = "MIT/Apache-2.0"
version = "0.4.4"
authors = ["MagicStack Inc. <hello@magic.io>"]
edition = "2021"
description = "A library for streaming data between clients and servers."
readme = "README.md"
rust-version.workspace = true

[features]
# rustls or openssl imply tokio, and tokio is the only stream we support
# at this time.
default = ["tokio"]
full = [
    "client", "server", "tokio", "rustls", "openssl", "hickory", "keepalive", "pem", "optimization"
]
client = []
server = []
serde = ["dep:serde"]
tokio = ["dep:tokio", "dep:socket2", "derive-io/tokio"]
rustls = ["tokio", "dep:rustls", "dep:rustls-tokio-stream", "dep:rustls-platform-verifier", "dep:webpki", "dep:webpki-roots"]
openssl = ["tokio", "dep:openssl", "dep:tokio-openssl", "dep:foreign-types", "dep:openssl-sys", "dep:openssl-probe", "dep:webpki-root-certs"]
hickory = ["dep:hickory-resolver"]
keepalive = ["dep:socket2"]
pem = ["dep:rustls-pemfile"]
optimization = ["dep:socket2"]
__manual_tests = []
# Provide test certificates, authorities and keys for easier downstream testing
__test_keys = []

[dependencies]
derive_more = { version = "2", default-features = false, features = ["debug", "constructor", "from", "try_from", "display", "error"] }
futures = "0.3"
smallvec = "1"
derive-io = "=0.5.0"

# Given that this library may be used in multiple contexts, we want to limit the
# features we enable by default.

rustls-pki-types = { version = "1", default-features = false, features = ["std", "alloc"] }

# feature = "keepalive"/"optimization"
socket2 = { version = "0.5.2", optional = true }

# feature = "tokio"
tokio = { version = "1", optional = true, default-features = false, features = ["net", "rt", "io-util"] }
hickory-resolver = { version = "0.25.2", optional = true, default-features = false, features = ["tokio", "system-config"] }

# feature = "rustls"
# We rely on certain aspects of these crates. Use caution when upgrading.
rustls = { version = ">= 0.23.25", optional = true, default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-tokio-stream = { version = "0.6.0", optional = true }
rustls-platform-verifier = { version = "0.5.1", optional = true }
webpki = { version = "0.22", optional = true }
webpki-roots = { version = "1", optional = true }

# feature = "openssl"
openssl = { version = "0.10.72", optional = true, default-features = false }
tokio-openssl = { version = "0.6.5", optional = true, default-features = false }
# Get these from openssl
foreign-types = { version = "0.3", optional = true, default-features = false }
openssl-sys = { version = "0.9", optional = true, default-features = false }
openssl-probe = { version = "0.1.6", optional = true, default-features = false }
webpki-root-certs = { version = "1", optional = true }

# feature = serde
serde = { version = "1.0", optional = true }

# feature = pem
rustls-pemfile = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
openssl-sys = { version = "0.9", optional = true, default-features = false, features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Run tests with all features enabled
gel-stream = { path = ".", features = ["full", "__test_keys"] }

tokio = { version = "1", features = ["full"] }
tempfile = "3"
ntest = "0.9.3"
x509-parser = "0.17.0"

[lints]
workspace = true

[lib]
name = "gel_stream"

[package.metadata.docs.rs]
features = ["full"]
