[package]
name = "functional"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
bytes = "1.0"
dtor = "0"
env_logger = "0.11"
thiserror = "2"
test-log = "0.2.8"
futures-util = "0.3.21"
miette = { version = "7.2.0", features = ["fancy"] }
tempfile = "3.13.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

gel-tokio = { path = "../gel-tokio", features = ["unstable"] }
gel-protocol = { path = "../gel-protocol", features = ["serde_json"] }
gel-errors = { path = "../gel-errors" }
gel-derive = { path = "../gel-derive" }
gel-captive = { path = "../gel-captive" }

[features]
unstable = []

[[test]]
name = "functional"
path = "functional/src/main.rs"
